// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TerminalToolbar snapshots > matches snapshot when active 1`] = `
<div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; height: 34px; min-height: 34px; max-height: 34px; padding: 0px 10px; border-bottom: 1px solid var(--ui-border); user-select: none; background-color: var(--ui-panel-bg-alt); border-left: 2px solid var(--ui-accent);"
  >
    <div
      style="display: flex; align-items: center; gap: 6px; overflow: hidden;"
    >
      <svg
        class="tabler-icon tabler-icon-terminal-2 "
        data-testid="icon-terminal"
        fill="none"
        height="14"
        stroke="var(--ui-text-primary)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l3 3l-3 3"
        />
        <path
          d="M13 15l3 0"
        />
        <path
          d="M3 6a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2l0 -12"
        />
      </svg>
      <span
        style="color: var(--ui-text-primary); font-size: 11px; font-family: var(--ui-font-mono); letter-spacing: 0.08em; cursor: default; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
      >
        Terminal 1
      </span>
    </div>
    <div
      style="display: flex; align-items: center; gap: 2px;"
    >
      <button
        aria-label="Split horizontal"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-layout-rows "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2l0 -12"
          />
          <path
            d="M4 12l16 0"
          />
        </svg>
      </button>
      <button
        aria-label="Split vertical"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-layout-columns "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2l0 -12"
          />
          <path
            d="M12 4l0 16"
          />
        </svg>
      </button>
      <button
        aria-label="Auto split"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-arrows-split "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 17h-8l-3.5 -5h-6.5"
          />
          <path
            d="M21 7h-8l-3.495 5"
          />
          <path
            d="M18 10l3 -3l-3 -3"
          />
          <path
            d="M18 20l3 -3l-3 -3"
          />
        </svg>
      </button>
      <button
        aria-label="Open browser"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-browser "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8h16"
          />
          <path
            d="M4 6a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2l0 -12"
          />
          <path
            d="M8 4v4"
          />
        </svg>
      </button>
      <button
        aria-label="Close"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-x "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6l-12 12"
          />
          <path
            d="M6 6l12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TerminalToolbar snapshots > matches snapshot when inactive 1`] = `
<div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; height: 34px; min-height: 34px; max-height: 34px; padding: 0px 10px; border-bottom: 1px solid var(--ui-border); user-select: none; background-color: var(--ui-panel-bg); border-left: 2px solid transparent;"
  >
    <div
      style="display: flex; align-items: center; gap: 6px; overflow: hidden;"
    >
      <svg
        class="tabler-icon tabler-icon-terminal-2 "
        data-testid="icon-terminal"
        fill="none"
        height="14"
        stroke="var(--ui-text-primary)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l3 3l-3 3"
        />
        <path
          d="M13 15l3 0"
        />
        <path
          d="M3 6a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2l0 -12"
        />
      </svg>
      <span
        style="color: var(--ui-text-primary); font-size: 11px; font-family: var(--ui-font-mono); letter-spacing: 0.08em; cursor: default; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
      >
        Terminal 1
      </span>
    </div>
    <div
      style="display: flex; align-items: center; gap: 2px;"
    >
      <button
        aria-label="Split horizontal"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-layout-rows "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2l0 -12"
          />
          <path
            d="M4 12l16 0"
          />
        </svg>
      </button>
      <button
        aria-label="Split vertical"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-layout-columns "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2l0 -12"
          />
          <path
            d="M12 4l0 16"
          />
        </svg>
      </button>
      <button
        aria-label="Auto split"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-arrows-split "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 17h-8l-3.5 -5h-6.5"
          />
          <path
            d="M21 7h-8l-3.495 5"
          />
          <path
            d="M18 10l3 -3l-3 -3"
          />
          <path
            d="M18 20l3 -3l-3 -3"
          />
        </svg>
      </button>
      <button
        aria-label="Open browser"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-browser "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8h16"
          />
          <path
            d="M4 6a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2l0 -12"
          />
          <path
            d="M8 4v4"
          />
        </svg>
      </button>
      <button
        aria-label="Close"
        style="display: flex; align-items: center; justify-content: center; width: 22px; height: 22px; border: 1px solid transparent; border-radius: var(--ui-radius); cursor: pointer; padding: 0px; background-color: transparent; border-color: transparent;"
      >
        <svg
          class="tabler-icon tabler-icon-x "
          fill="none"
          height="14"
          stroke="var(--ui-text-primary)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6l-12 12"
          />
          <path
            d="M6 6l12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
